visibility of hyperlink fix

--- a/styles/leaflet.css
+++ b/styles/leaflet.css
@@ -507,12 +507,12 @@
 
 .leaflet-popup a:link {
 	text-decoration: none;
-	color: #f7941d;
+	color: #f5c388;
 }
 
 .leaflet-popup a:visited {
 	text-decoration: none;
-	color: #f7941d;
+	color: #f5c388;
 }
 
 .leaflet-popup a:hover {
